<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">每日一笑</string>
    <string name="fourteen">14</string>
    <string name="twenty_four">24</string>
    <string name="twenty">20</string>
    <string name="sixty">40</string>
    <string name="two_hundred">200</string>
    <string name="one_hundred_fourty">140</string>
    <string name="loading_joke_now">正在加载笑话&#8230;</string>
    <string name="another_click_exit_app">再按一次退出设置</string>
    <string name="are_you_sure_reset">确认恢复默认设置吗？</string>
    <string name="tip">提示</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="app">应用</string>
    <string name="background">背景</string>
    <string name="background_color">背景颜色</string>
    <string name="text">字体</string>
    <string name="text_size">字体大小</string>
    <string name="page_size">翻页字数</string>
    <string name="text_color">字体颜色</string>
    <string name="default_load_joke_number">默认加载笑话个数</string>
    <string name="reset">重置</string>
    <string name="sample">样本</string>
    <string name="current_value">当前值：</string>
    <string name="reset_all_data">恢复默认设置</string>
    <string name="about">关于</string>
    <string name="copyright">Copyright 2014 by Morgan.Ji</string>
    <string name="about_content">    这是一款小工具，添加方法取决于手机中小工具的添加方法，比如在手机屏幕空白区域长按屏幕->添加小工具->每日一笑。如发现任何问题可直接联系作者。\n邮箱：714758359@qq.com</string>
</resources>